tests: replace old tests with comperhensive Product test along with general 'shallow' tests for other classes; add public modifier to extent class methods for testing purposes